## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = robohockey

robohockey_SOURCES = \
	main.cpp    \
	app/roboHockey.cpp    \
	app/roboHockey.h    \
	math/vector2D.h    \
	ui/window.h    \
	ui/window.cpp    \
	game/game.h    \
	game/game.cpp    \
	game/player.cpp    \
	game/player.h    \
	game/rink.h    \
	game/team.h    \
	game/team.cpp    \
	game/rink.cpp    \
	game/puck.h    \
	game/puck.cpp	\
	game/clock.h	\
	game/clock.cpp	\
	game/goal.h	\
	game/skills.h	\
	game/goal.cpp

robohockey_LDFLAGS = 

robohockey_LDADD = 
